--- a/projetos.html
+++ b/projetos.html
@@ -10,7 +10,7 @@
 
     <title>Document</title>
 
-    <link rel="stylesheet" href="/estilo.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
