--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <a href=""><span>Dev.</span>io</a>
 
-<a href="/index2.html" class="lua"> &#x2600;&#xFE0F; </a>
+<a href="index2.html" class="lua"> &#x2600;&#xFE0F; </a>
 
 </div>
 
