--- a/index2.html
+++ b/index2.html
@@ -22,7 +22,7 @@
 
 <a href=""><span>Dev.</span>io</a>
 
-<a href="/index.html" class="lua">  &#x1F319; </a>
+<a href="index.html" class="lua">  &#x1F319; </a>
 
 </div>
 
