--- a/index.html
+++ b/index.html
@@ -10,50 +10,32 @@
 
     <title>Document</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 
 </head>
-
 <body>
-
     <div class="menu">
-
         <div class="dev">
-
 <a href=""><span>Dev.</span>io</a>
-
-<a href="index2.html" class="lua"> &#x2600;&#xFE0F; </a>
-
+<a href="/index2.html" class="lua"> &#x2600;&#xFE0F; </a>
 </div>
-
+<div class="menuproj">
 <a href="">Inicio</a>
-
 <a href="/projeto.html">Projetos</a>
-
 <a href="">Contato</a>
+</div>
 
  
 
      
 
     </div>
-
     <div class="colum">
-
     <div class="primeiratela">
-
         <div class="primeiratelatxt">
-
         <h3>Bem vindo</h3>
-
         <h1>Eu Sou Eliaquim Natividade</h1>
-
         <h2> Design & Programacao </h2>
-
-        <button> Saiba Mais </button>
-
-        <button class="download"> Download CV </button>
-
         </div>
 
 
@@ -104,5 +86,4 @@
 </body>
 
 </html>
-
  
