--- a/index.html
+++ b/index.html
@@ -10,44 +10,30 @@
 
     <title>Document</title>
 
-    <link rel="stylesheet" href="style.css">
-
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
     <div class="menu">
         <div class="dev">
 <a href=""><span>Dev.</span>io</a>
-<a href="/index2.html" class="lua"> &#x2600;&#xFE0F; </a>
+<a href="/index.html" class="lua">  &#x1F319; </a>
 </div>
-<div class="menuproj">
 <a href="">Inicio</a>
-<a href="/projeto.html">Projetos</a>
+<a href="">Projetos</a>
 <a href="">Contato</a>
-</div>
-
- 
-
-     
-
     </div>
     <div class="colum">
     <div class="primeiratela">
         <div class="primeiratelatxt">
         <h3>Bem vindo</h3>
-        <h1>Eu Sou Eliaquim Natividade</h1>
+        <h1>Eu sou Eliaquim Natividade</h1>
         <h2> Design & Programacao </h2>
         </div>
-
-
-
-
     </div>
 
        <!--COLUNA 2 COLOCAR APENAS COR  PARA DESTAQUE-->
 
     <div class="bluecolum2">
-
-   
 
         <img src="https://images.vexels.com/media/users/3/145742/isolated/lists/9f5d890c42b637514ba86c1ab83678c7-ilustracao-de-dedo-levantado-de-homem.png" alt="">
 
@@ -56,6 +42,8 @@
     </div>
 
  
+
+     <!--    ABAIXO DAS DUAS CENTRALIZADO -->
 
          <div class="sobre">
 
@@ -67,19 +55,9 @@
 
             </p>
 
-            </div>
+            <img src="" alt="">
 
          </div>
-
- 
-
-         <div>
-
-         <h2>dsakpdska</h2>
-
-        </div>
-
-         
 
  
 
