--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="menu">
         <div class="dev">
 <a href=""><span>Dev.</span>io</a>
-<a href="/index.html" class="lua">  &#x1F319; </a>
+<a href="index2.html" class="lua">  &#x1F319; </a>
 </div>
 <a href="">Inicio</a>
 <a href="">Projetos</a>
