--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <title>Document</title>
 
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="menu">
